completing unit test
