# api.yml
@@ -40,6 +40,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   /login:
     post:
       summary: User Login API 
@@ -63,6 +69,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   /profile:
     get:
       summary: Get User Profile
@@ -82,6 +100,12 @@ paths:
                 $ref: "#/components/schemas/GetProfileResponse"
         '403':
           description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -110,7 +134,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/UpdateProfileResponse"
         '409':
-          description: Success
+          description: Conflict
           content:
             application/json:    
               schema:
@@ -123,6 +147,18 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
         '400':
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
